Dibuat menggunakan Colab

--- a/Deep_Learning_Kel_1.ipynb
+++ b/Deep_Learning_Kel_1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -2415,8 +2416,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/northwestWebbs/UAS_Deep-Learning_Kelompok-1-Studi-Kasus-3-Analisis-sentimen-ulasan-produk-dengan-BERT-/blob/main/Deep_Learning_Kel_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2471,7 +2482,7 @@
         "id": "rmI9OPZHvYyv",
         "outputId": "a2774dfb-0485-4c4b-c6cc-fc1973fdeece"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2695,7 +2706,7 @@
       "metadata": {
         "id": "0mUNAQiAwTdh"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2715,7 +2726,7 @@
       "metadata": {
         "id": "fzZohbAlw1y3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2749,7 +2760,7 @@
         },
         "outputId": "5e074a15-5ac9-4353-cbee-f21df2beb75e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2781,7 +2792,7 @@
       "metadata": {
         "id": "MHfbudXow_AW"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2827,7 +2838,7 @@
         },
         "outputId": "21e8c0f6-ef8d-47c5-8cd8-a4f892fe5968"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2876,7 +2887,7 @@
         },
         "outputId": "f4f8874a-8fe8-468d-e785-b897107a54e0"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3064,7 +3075,7 @@
         },
         "outputId": "1ee5027c-62cb-4087-fa86-ece5f33e42dc"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3494,7 +3505,7 @@
         },
         "outputId": "072f8826-31f5-4cfc-ab2f-5fcb6f336c61"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3555,7 +3566,7 @@
         },
         "outputId": "31bbd603-1af0-407a-effd-99373af9c8c9"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3584,7 +3595,7 @@
         },
         "outputId": "696b1592-91ac-4af3-bf68-8717272afbe7"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3622,7 +3633,7 @@
         "id": "ktqCLbYW_Kf5",
         "outputId": "c2b01365-e568-4d27-fc65-5964ed12cf90"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
